# Smart_car_Finalassignment

./: README.md  frames_2025-01-24_15.13.02.gv  frames_2025-01-25_17.20.42.gv  frames_2025-01-26_10.20.16.gv
install/: local_setup.sh  setup.sh
install/ackermann_msgs/share/ackermann_msgs/: package.sh
install/car_gazebo_plugin/share/ament_index/resource_index/package_run_dependencies/: car_gazebo_plugin
install/car_gazebo_plugin/share/car_gazebo_plugin/: local_setup.sh  package.sh
install/smart_car/lib/smart_car/: keyboard_control.py
install/smart_car/local/lib/python3.10/dist-packages/smart_car-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/smart_car/share/smart_car/: package.sh
install/smart_car/share/smart_car/config/: ackermann_controller.yaml  nav2_params.yaml
install/smart_car/share/smart_car/launch/: format.py  localization.launch.py
install/smart_car/share/smart_car/scripts/: joint_state_pub.py  odom.py
install/smart_car/share/smart_car/urdf/: smartcar.urdf
install/smartcar_msgs/share/smartcar_msgs/: package.sh
install/smartcar_msgs/share/smartcar_msgs/cmake/: export_smartcar_msgs__rosidl_generator_cExport.cmake  export_smartcar_msgs__rosidl_generator_cppExport.cmake  export_smartcar_msgs__rosidl_generator_pyExport.cmake  smartcar_msgs__rosidl_typesupport_cExport.cmake  smartcar_msgs__rosidl_typesupport_introspection_cExport.cmake
log/: latest_build
src/ackermann_msgs/: CMakeLists.txt
src/car_gazebo_plugin/: CMakeLists.txt
src/car_gazebo_plugin/src/: car_gazebo_plugin.cpp  car_gazebo_plugin.hpp
src/smart_car/: CMakeLists.txt  package.xml  setup.py
src/smart_car/config/: controllers.yaml  ekf.yaml  smalltown_world.yaml
src/smart_car/launch/: gazebo.launch.py  nav2.launch.py  smartcar.launch.py
src/smart_car/rviz/: nav2.rviz  rviz_smartcar_working.rviz  smart_car.rviz
src/smart_car/scripts/: vehicle_status.py
src/smartcar_msgs/: CMakeLists.txt  package.xml  setup.py
